@@ -3,11 +3,16 @@ Revision history for Perl extension Net::SSLeay.
 ????
      Added support for TLSV1_1 and TLSV1_2 methods with SSL_CTX_tlsv1_1_new(),
      SSL_CTX_tlsv1_2_new(), TLSv1_1_method() and TLSv1_2_method(), where
-     available in the underluying openssl.
+     available in the underlying openssl.
      Added CRL support functions X509_CRL_get_ext(), X509_CRL_get_ext_by_NID(),
      X509_CRL_get_ext_count(). Patch from Franck Youssef.
      Fixed a problem which could cause content with a value of '0' to not be
-     correctly encoded by do_httpx3 and friends. Reported by Victor Efimov via RT.
+     correctly encoded by do_httpx3 and friends. Reported by Victor Efimov via
+     RT.
+     Added support for SSL_get_tlsa_record_byname() required for DANE support in
+     openssl-1.0.2 and later. SSL_get_tlsa_record_byname() was added to
+     OpenSSL with the financial assistance of .SE.
+     Testing with openssl-1.0.2-stable-SNAP-20130521.
 
 1.54 2013-03-23
      t/data/testcert_cdp.crt.pem_dump and t/data/testcert_cdp.crt.pem were
